# synthetic_evolution

./: .gitignore  .gitmodules  README.md
examples/: Ex1.java  Ex1.sk  Ex2_ArrayField.sk
exploratory/: #one_field.sk#  one_field.sk  one_field.sk~
gensketch/: GenFormat.hs  GenSketch.hs  README.md  gensketch.cabal  gensketch.cabal~  runExample.sh
gensketch/Data/SketchFileFormat/: Format.hs
gensketch/GenSketch/: GenFormat.hs  GenSketch.hs  GenSketch.hs~  Server.hs  Server.hs~
gensketch/GenSketch/Data/SketchFileFormat/: Format.hs  Format.hs~
gensketch/scripts/: runsketch.sh  runsketch.sh~
java_code_generator/: java_code_generator.properties  java_code_generator.xml  module_java_code_generator.xml
java_code_generator/src/edu/mit/syntheticevolution/: JavaCodeGen.java  SymbolicExecutor.java
java_code_generator/src/edu/mit/syntheticevolution/symbolic/: AndNode.java  BinOpNode.java  IteNode.java  NegationNode.java  RawStringNode.java  SymbolicExp.java
visualization/: index.html
visualization/css/: format_histories.css
visualization/js/: d3util.js  formatHistory.js  visualization.js
