Name:                gensketch
Version:             0.1.0.0
-- synopsis:            
-- description:         
License:             BSD3
License-file:        LICENSE
Author:              James Koppel, Chelsea Voss
Maintainer:          jkoppel@mit.edu
-- copyright:           
-- category:            
Build-Type:          Simple
-- extra-source-files:  
Cabal-Version:       >=1.10

Executable server
  main-is:             GenSketch/Server.hs
  build-depends:       base >= 4.6 && <4.8
                     , bytestring < 0.11
                     , containers < 0.5.6
                     , pretty >= 1.1.1.0 && < 1.2
                     , process < 1.3
                     , json < 0.10
                     , snap-core < 0.10
                     , snap-extras < 0.10
                     , snap-server < 0.10
                     , temporary < 1.3
                     , transformers < 0.5
  default-language:    Haskell2010
  ghc-options:         -Wall