Name:                gensketch
Version:             0.1.0.0
-- synopsis:            
-- description:         
License:             BSD3
License-file:        LICENSE
Author:              James Koppel, Chelsea Voss
Maintainer:          jkoppel@mit.edu
-- copyright:           
-- category:            
Build-Type:          Simple
-- extra-source-files:  
Cabal-Version:       >=1.10

Executable server
  main-is:             GenSketch/Server.hs
  build-depends:       base >= 4.6
                     , bytestring
                     , containers
                     , pretty >= 1.1.1.0 && < 1.2
                     , process 
                     , json 
                     , snap-core 
                     , snap-server
                     , temporary
                     , transformers 
  default-language:    Haskell2010
  ghc-options:         -Wall